--- a/index.html
+++ b/index.html
@@ -1,84 +1,37 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sonic Onset Adventure</title>
-    <link rel="icon" href="/favicon.png">
-    <link rel="stylesheet" href="/style.css">
-    <meta property="og:title" content="Sonic Onset Adventure">
-    <meta property="og:description" content="Home">
-    <meta property="og:url" content="https://soniconset.org/">
-    <meta property="og:image" content="https://soniconset.org/soalogo.png">
-    <meta name="theme-color" content="#181880">
+    <title>Sonic Rising Chaos</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background: url('Background.png') center/cover no-repeat fixed; /* Imagen de fondo */
+        }
+        header {
+            background-color: rgba(0, 81, 255, 0.5); /* Fondo semi-transparente */
+            color: #fff;
+            padding: 20px;
+            text-align: center;
+        }
+        .logo {
+            max-width: 1000px;
+            height: auto;
+        }
+        .description {
+            margin: 20px;
+            text-align: center;
+            color: #fff;
+        }
+    </style>
 </head>
 <body>
-    <div class="content">
-        <img src="soalogo.png" alt="Sonic Onset Adventure" class="soalogo">
-        <hr>
-        <div class="soa_comingsoon">
-            <a href="download"><h1>Download the latest version here!</h1></a>
-            <p>Consider joining our <a href="https://discord.gg/jx8CzQ6Kfe">Discord Server</a></p>
-            <p>Or follow us on <a href="https://twitter.com/SonicOnset">Twitter</a></p>
-        </div>
-        <hr>
-        <div class="soa_aboutus">
-            <h2>About Us</h2>
-            <p>
-                Sonic Onset Adventure is a Sonic fangame that takes heavy inspiration from the Sonic style of the early 2000s.
-                Following the Adventure formula and physics closely and providing what we hope will be a fun game at the same time!
-            </p>
-            <hr>
-            <div class="soa_bio_l">
-                <a href="https://twitter.com/DigiPurgatory"><img src="pfp/digi.png" alt="DigitalPurgatory" class="soa_pfp"></a>
-                <h3>DigitalPurgatory</h3>
-                <p>Project lead, animation, character modelling, UI work. This guy can do it all.</p>
-                <p>He keeps everything going and directs us to make the best game we can!</p>
-            </div>
-            <div class="soa_bio_r">
-                <a href="https://twitter.com/cuckydev"><img src="pfp/cuckydev.png" alt="CKDEV" class="soa_pfp"></a>
-                <h3>CKDEV</h3>
-                <p>Programmer and second in command.</p>
-                <p>He handles the backend systems and physics of the game.</p>
-            </div>
-            <div class="soa_bio_l">
-                <a href="https://twitter.com/SuperJumpman12"><img src="pfp/superjumpman.png" alt="SuperJumpman12" class="soa_pfp"></a>
-                <h3>SuperJumpman12</h3>
-                <p>Artist and occasional programmer.</p>
-                <p>Responsible for character art and provides programming support.</p>
-            </div>
-            <div class="soa_bio_r">
-                <a href="https://soundcloud.com/neometalserpent"><img src="pfp/criticalhealth.png" alt="Critical Health" class="soa_pfp"></a>
-                <h3>Critical Health</h3>
-                <p>Lead composer.</p>
-                <p>Creates all music tracks, from remixes to original compositions.</p>
-            </div>
-            <div class="soa_bio_l">
-                <a href="https://twitter.com/Rune_The_Fool7"><img src="pfp/nemissa.png" alt="Nemissa" class="soa_pfp"></a>
-                <h3>Nemissa</h3>
-                <p>Assistant programmer and graphic designer.</p>
-                <p>Involved in coding, graphic design, and stage design.</p>
-            </div>
-            <div class="soa_bio_r">
-                <a href="https://twitter.com/ZackATaei"><img src="pfp/zackataei.png" alt="ZackATaei" class="soa_pfp"></a>
-                <h3>ZackATaei</h3>
-                <p>Additional composer.</p>
-                <p>Assists with instrumentation and creative ideas for music.</p>
-            </div>
-            <div class="soa_bio_l">
-                <a href="https://twitter.com/ElPonchitoPio"><img src="pfp/elponchitopio.png" alt="ElPonchitoPio" class="soa_pfp"></a>
-                <h3>Ponchito</h3>
-                <p>Vocalist.</p>
-                <p>Provides vocals for the music tracks.</p>
-            </div>
-            <div class="soa_bio_r">
-                <a href="https://twitter.com/CyberThePerson"><img src="pfp/cyber.png" alt="Cyber" class="soa_pfp"></a>
-                <h3>Cyber</h3>
-                <p>Backup modeller.</p>
-                <p>Assists with backup character modelling.</p>
-            </div>
-        </div>
-    </div>
-    <div class="footer">Sonic Onset Adventure ©SOA Team 2020-2023</div>
+    <header>
+        <img src="Sonic_Rising_Chaos_Game_Logo_2024.png" alt="Logo de la empresa" class="logo">
+        <p>Sonic Rising Chaos is a fangame made in Roblox powered by the "Digital Swirl Engine" that takes mechanics and is based on games like SA1, SA2 and Advance 2.</p>
+    </header>
 </body>
 </html>
