--- a/index.html
+++ b/index.html
@@ -1,37 +1,61 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
+  <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sonic Rising Chaos</title>
     <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background: url('Background.png') center/cover no-repeat fixed; /* Imagen de fondo */
-        }
-        header {
-            background-color: rgba(0, 81, 255, 0.5); /* Fondo semi-transparente */
-            color: #fff;
-            padding: 20px;
-            text-align: center;
-        }
-        .logo {
-            max-width: 1000px;
-            height: auto;
-        }
-        .description {
-            margin: 20px;
-            text-align: center;
-            color: #fff;
-        }
+      body {
+        font-family: Arial, sans-serif;
+        background-image: url('ruta/a/tu/imagen-de-fondo.jpg');
+        background-size: cover;
+        background-position: center;
+        text-align: center;
+        margin: 0;
+        padding: 0;
+      }
+
+      header {
+        background-color: rgba(0, 0, 255, 0.5);
+        /* Color azul medio transparente */
+        padding: 20px 0;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+      }
+
+      .logo {
+        max-width: 200px;
+        height: auto;
+        margin-bottom: 10px;
+      }
+
+      .header-description {
+        font-size: 1.2em;
+        color: #fff;
+        margin: 0;
+      }
+
+      .description {
+        background-color: rgba(255, 255, 255, 0.8);
+        padding: 20px;
+        border-radius: 10px;
+        max-width: 600px;
+        margin: 20px auto;
+      }
+
+      .description p {
+        font-size: 1.2em;
+        color: #333;
+        margin-top: 0;
+      }
     </style>
-</head>
-<body>
+  </head>
+  <body>
     <header>
-        <img src="Sonic_Rising_Chaos_Game_Logo_2024.png" alt="Logo de la empresa" class="logo">
-        <p>Sonic Rising Chaos is a fangame made in Roblox powered by the "Digital Swirl Engine" that takes mechanics and is based on games like SA1, SA2 and Advance 2.</p>
+      <img src="ruta/a/tu/logo.png" alt="Sonic Rising Chaos Logo" class="logo">
+      <p class="header-description">Bienvenido a Sonic Rising Chaos, donde la velocidad y la aventura se encuentran en cada esquina.</p>
     </header>
-</body>
+  </body>
 </html>
