--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <style>
       body {
         font-family: Arial, sans-serif;
-        background-image: url('ruta/a/tu/imagen-de-fondo.jpg');
+        background-image: url('Background.png');
         background-size: cover;
         background-position: center;
         text-align: center;
@@ -54,8 +54,8 @@
   </head>
   <body>
     <header>
-      <img src="ruta/a/tu/logo.png" alt="Sonic Rising Chaos Logo" class="logo">
-      <p class="header-description">Bienvenido a Sonic Rising Chaos, donde la velocidad y la aventura se encuentran en cada esquina.</p>
+      <img src="Sonic_Rising_Chaos_Game_Logo_2024.png" alt="SRC Logo" class="srclogo">
+      <p class="header-description">Sonic Rising Chaos is a fangame made in Roblox powered by the "Digital Swirl Engine" that takes mechanics and is based on games like SA1, SA2 and Advance 2.</p>
     </header>
   </body>
 </html>
