--- a/index.html
+++ b/index.html
@@ -1,61 +1,43 @@
 <!DOCTYPE html>
 <html lang="es">
-  <head>
+<head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sonic Rising Chaos</title>
     <style>
-      body {
-        font-family: Arial, sans-serif;
-        background-image: url('Background.png');
-        background-size: cover;
-        background-position: center;
-        text-align: center;
-        margin: 0;
-        padding: 0;
-      }
-
-      header {
-        background-color: rgba(0, 0, 255, 0.5);
-        /* Color azul medio transparente */
-        padding: 20px 0;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-      }
-
-      .logo {
-        max-width: 50px;
-        height: auto;
-        margin-bottom: 10px;
-      }
-
-      .header-description {
-        font-size: 1.2em;
-        color: #fff;
-        margin: 0;
-      }
-
-      .description {
-        background-color: rgba(255, 255, 255, 0.8);
-        padding: 20px;
-        border-radius: 10px;
-        max-width: 600px;
-        margin: 20px auto;
-      }
-
-      .description p {
-        font-size: 1.2em;
-        color: #333;
-        margin-top: 0;
-      }
+        /* Estilos para el header */
+        header {
+            background-color: rgba(0, 0, 255, 0.5); /* Azul medio transparente */
+            padding: 20px; /* Espacio interior del header */
+            text-align: center; /* Texto centrado */
+        }
+        /* Estilos para el logo */
+        .logo {
+            width: 300px; /* Ancho del logo */
+            height: 300px; /* Alto del logo */
+            margin: 20px auto; /* Margen superior e inferior de 20px y centrado horizontalmente */
+        }
+        /* Estilos para la descripción */
+        .descripcion {
+            font-size: 24px; /* Tamaño de fuente */
+            color: #333; /* Color del texto */
+            margin-bottom: 20px; /* Margen inferior de 20px */
+        }
     </style>
-  </head>
-  <body>
+</head>
+<body>
+    <!-- Header -->
     <header>
-      <img src="Sonic_Rising_Chaos_Game_Logo_2024.png" alt="SRC Logo" class="srclogo">
-      <p class="header-description">Sonic Rising Chaos is a fangame made in Roblox powered by the "Digital Swirl Engine" that takes mechanics and is based on games like SA1, SA2 and Advance 2.</p>
+        <!-- Logo -->
+        <img src="logo-sonic-rising-chaos.png" alt="Logo de Sonic Rising Chaos" class="logo">
+        
+        <!-- Descripción -->
+        <p class="descripcion">Bienvenidos a Sonic Rising Chaos, la página oficial de la comunidad de fans de Sonic the Hedgehog. ¡Aquí encontrarás noticias, imágenes y contenido exclusivo sobre el mundo de Sonic!</p>
     </header>
-  </body>
+    
+    <!-- Contenido principal -->
+    <main>
+        <!-- Aquí va el contenido principal de la página -->
+    </main>
+</body>
 </html>
