--- a/index.html
+++ b/index.html
@@ -5,20 +5,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sonic Rising Chaos</title>
     <style>
+        /* Estilos para el body */
+        body {
+            font-family: Arial, sans-serif; /* Fuente Arial para todo el texto */
+            background-image: url('Background.png'); /* Imagen de fondo */
+            background-size: cover; /* Tamaño de la imagen de fondo */
+            background-position: center; /* Posición de la imagen de fondo */
+            margin: 0; /* Margen exterior */
+            padding: 0; /* Espacio interior */
+        }
         /* Estilos para el header */
         header {
             background-color: rgba(0, 0, 255, 0.5); /* Azul medio transparente */
             padding: 20px; /* Espacio interior del header */
             text-align: center; /* Texto centrado */
+            font-family: Arial, sans-serif; /* Fuente Arial */
         }
         /* Estilos para el logo */
-        .logo {
+       .logo {
             width: 300px; /* Ancho del logo */
             height: 300px; /* Alto del logo */
             margin: 20px auto; /* Margen superior e inferior de 20px y centrado horizontalmente */
         }
         /* Estilos para la descripción */
-        .descripcion {
+       .descripcion {
             font-size: 24px; /* Tamaño de fuente */
             color: #333; /* Color del texto */
             margin-bottom: 20px; /* Margen inferior de 20px */
@@ -29,7 +39,7 @@
     <!-- Header -->
     <header>
         <!-- Logo -->
-        <img src="logo-sonic-rising-chaos.png" alt="Logo de Sonic Rising Chaos" class="logo">
+        <img src="Sonic_Rising_Chaos_Game_Logo_2024.png" alt="SRC Logo" class="logo">
         
         <!-- Descripción -->
         <p class="descripcion">Bienvenidos a Sonic Rising Chaos, la página oficial de la comunidad de fans de Sonic the Hedgehog. ¡Aquí encontrarás noticias, imágenes y contenido exclusivo sobre el mundo de Sonic!</p>
