--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         /* Estilos para el body */
         body {
             font-family: Arial, sans-serif; /* Fuente Arial para todo el texto */
-            background-image: url('Background.png'); /* Imagen de fondo */
+            background-image: url('fondo-sonic-rising-chaos.jpg'); /* Imagen de fondo */
             background-size: cover; /* Tamaño de la imagen de fondo */
             background-position: center; /* Posición de la imagen de fondo */
             margin: 0; /* Margen exterior */
@@ -23,8 +23,8 @@
         }
         /* Estilos para el logo */
        .logo {
-            width: 300px; /* Ancho del logo */
-            height: 300px; /* Alto del logo */
+            width: 30%; /* Ancho del logo (30% del ancho de la pantalla) */
+            height: auto; /* Alto del logo (se ajusta automáticamente) */
             margin: 20px auto; /* Margen superior e inferior de 20px y centrado horizontalmente */
         }
         /* Estilos para la descripción */
@@ -39,7 +39,7 @@
     <!-- Header -->
     <header>
         <!-- Logo -->
-        <img src="Sonic_Rising_Chaos_Game_Logo_2024.png" alt="SRC Logo" class="logo">
+        <img src="logo-sonic-rising-chaos.png" alt="Logo de Sonic Rising Chaos" class="logo">
         
         <!-- Descripción -->
         <p class="descripcion">Bienvenidos a Sonic Rising Chaos, la página oficial de la comunidad de fans de Sonic the Hedgehog. ¡Aquí encontrarás noticias, imágenes y contenido exclusivo sobre el mundo de Sonic!</p>
