--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <!-- Header -->
     <header>
         <!-- Logo -->
-        <img src="logo-sonic-rising-chaos.png" alt="Logo de Sonic Rising Chaos" class="logo">
+        <img src="Sonic_Rising_Chaos_Game_Logo_2024.png" alt="Logo de Sonic Rising Chaos" class="logo">
         
         <!-- Descripción -->
         <p class="descripcion">Bienvenidos a Sonic Rising Chaos, la página oficial de la comunidad de fans de Sonic the Hedgehog. ¡Aquí encontrarás noticias, imágenes y contenido exclusivo sobre el mundo de Sonic!</p>
