--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         }
         /* Estilos para el logo */
        .logo {
-            width: 30%; /* Ancho del logo (30% del ancho de la pantalla) */
+            width: 40%; /* Ancho del logo (40% del ancho de la pantalla) */
             height: auto; /* Alto del logo (se ajusta automáticamente) */
             margin: 20px auto; /* Margen superior e inferior de 20px y centrado horizontalmente */
         }
@@ -39,7 +39,7 @@
     <!-- Header -->
     <header>
         <!-- Logo -->
-        <img src="Sonic_Rising_Chaos_Game_Logo_2024.png" alt="Logo de Sonic Rising Chaos" class="logo">
+        <img src="logo-sonic-rising-chaos.png" alt="Logo de Sonic Rising Chaos" class="logo">
         
         <!-- Descripción -->
         <p class="descripcion">Bienvenidos a Sonic Rising Chaos, la página oficial de la comunidad de fans de Sonic the Hedgehog. ¡Aquí encontrarás noticias, imágenes y contenido exclusivo sobre el mundo de Sonic!</p>
