--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         /* Estilos para el body */
         body {
             font-family: Arial, sans-serif; /* Fuente Arial para todo el texto */
-            background-image: url('fondo-sonic-rising-chaos.jpg'); /* Imagen de fondo */
+            background-image: url('Background.png'); /* Imagen de fondo */
             background-size: cover; /* Tamaño de la imagen de fondo */
             background-position: center; /* Posición de la imagen de fondo */
             margin: 0; /* Margen exterior */
@@ -39,10 +39,10 @@
     <!-- Header -->
     <header>
         <!-- Logo -->
-        <img src="logo-sonic-rising-chaos.png" alt="Logo de Sonic Rising Chaos" class="logo">
+        <img src="Sonic_Rising_Chaos_Game_Logo_2024.png" alt="SRC Logo" class="logo">
         
         <!-- Descripción -->
-        <p class="descripcion">Bienvenidos a Sonic Rising Chaos, la página oficial de la comunidad de fans de Sonic the Hedgehog. ¡Aquí encontrarás noticias, imágenes y contenido exclusivo sobre el mundo de Sonic!</p>
+        <p class="descripcion">Sonic Rising Chaos is a fangame made in Roblox powered by the "Digital Swirl Engine" that takes mechanics and is based on games like SA1, SA2 and Advance 2.</p>
     </header>
     
     <!-- Contenido principal -->
