--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
             background-image: url('Background.png'); /* Imagen de fondo */
             background-size: cover; /* Tamaño de la imagen de fondo */
             background-position: center; /* Posición de la imagen de fondo */
+            background-repeat: no-repeat; /* No repetir la imagen de fondo */
             margin: 0; /* Margen exterior */
             padding: 0; /* Espacio interior */
+            height: 100vh; /* Alto del body para que la imagen de fondo se muestre completa */
         }
         /* Estilos para el header */
         header {
@@ -22,13 +24,13 @@
             font-family: Arial, sans-serif; /* Fuente Arial */
         }
         /* Estilos para el logo */
-       .logo {
+      .logo {
             width: 40%; /* Ancho del logo (40% del ancho de la pantalla) */
             height: auto; /* Alto del logo (se ajusta automáticamente) */
             margin: 20px auto; /* Margen superior e inferior de 20px y centrado horizontalmente */
         }
         /* Estilos para la descripción */
-       .descripcion {
+      .descripcion {
             font-size: 24px; /* Tamaño de fuente */
             color: #FFFFFF; /* Color del texto: blanco */
             margin-bottom: 20px; /* Margen inferior de 20px */
@@ -39,10 +41,10 @@
     <!-- Header -->
     <header>
         <!-- Logo -->
-        <img src="Sonic_Rising_Chaos_Game_Logo_2024.png" alt="SRC Logo" class="logo">
+        <img src="logo-sonic-rising-chaos.png" alt="Logo de Sonic Rising Chaos" class="logo">
         
         <!-- Descripción -->
-        <p class="descripcion">Sonic Rising Chaos is a fangame made in Roblox powered by the "Digital Swirl Engine" that takes mechanics and is based on games like SA1, SA2 and Advance 2.</p>
+        <p class="descripcion">Bienvenidos a Sonic Rising Chaos, la página oficial de la comunidad de fans de Sonic the Hedgehog. ¡Aquí encontrarás noticias, imágenes y contenido exclusivo sobre el mundo de Sonic!</p>
     </header>
     
     <!-- Contenido principal -->
