--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sonic Rising Chaos</title>
+    <link rel="icon" type="image/png" href="SRC_Team.png">
     <style>
         /* Estilos para el body */
         body {
@@ -24,13 +25,13 @@
             font-family: Arial, sans-serif; /* Fuente Arial */
         }
         /* Estilos para el logo */
-      .logo {
+        .logo {
             width: 40%; /* Ancho del logo (40% del ancho de la pantalla) */
             height: auto; /* Alto del logo (se ajusta automáticamente) */
             margin: 20px auto; /* Margen superior e inferior de 20px y centrado horizontalmente */
         }
         /* Estilos para la descripción */
-      .descripcion {
+        .descripcion {
             font-size: 24px; /* Tamaño de fuente */
             color: #FFFFFF; /* Color del texto: blanco */
             margin-bottom: 20px; /* Margen inferior de 20px */
