--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sonic Rising Chaos</title>
-    <link rel="icon" type="image/png" href="SRC_Team.png">
+    <link rel="icon" type="image/png" href="favicon.png">
     <style>
         /* Estilos para el body */
         body {
@@ -25,16 +25,31 @@
             font-family: Arial, sans-serif; /* Fuente Arial */
         }
         /* Estilos para el logo */
-        .logo {
+       .logo {
             width: 40%; /* Ancho del logo (40% del ancho de la pantalla) */
             height: auto; /* Alto del logo (se ajusta automáticamente) */
             margin: 20px auto; /* Margen superior e inferior de 20px y centrado horizontalmente */
         }
         /* Estilos para la descripción */
-        .descripcion {
+       .descripcion {
             font-size: 24px; /* Tamaño de fuente */
             color: #FFFFFF; /* Color del texto: blanco */
             margin-bottom: 20px; /* Margen inferior de 20px */
+        }
+        /* Estilos para la sección de créditos */
+       .creditos {
+            background-color: #f7f7f7; /* Fondo claro */
+            padding: 20px; /* Espacio interior de la sección de créditos */
+            text-align: center; /* Texto centrado */
+        }
+       .credito {
+            margin-bottom: 10px; /* Margen inferior entre cada crédito */
+        }
+       .credito img {
+            width: 20px; /* Ancho del icono */
+            height: 20px; /* Alto del icono */
+            margin-right: 10px; /* Margen derecho del icono */
+            border-radius: 50%; /* Redondear el icono */
         }
     </style>
 </head>
@@ -47,6 +62,23 @@
         <!-- Descripción -->
         <p class="descripcion">Sonic Rising Chaos is a fangame made in Roblox powered by the "Digital Swirl Engine" that takes mechanics and is based on games like SA1, SA2 and Advance 2.</p>
     </header>
+    
+    <!-- Sección de créditos -->
+    <section class="creditos">
+        <h2>Créditos del equipo</h2>
+        <div class="credito">
+            <img src="blaze-icon.png" alt="Icono de Blaze">
+            Blaze - Owner, Graphic designer, Scripter. He started everything.
+        </div>
+        <div class="credito">
+            <img src="Virtual.png" alt="Icono de DEVirtual">
+            DEVirtual - Co-Owner, Scripter, UI work. He is the best scripter.
+        </div>
+        <div class="credito">
+            <img src="GhostMaker12.png" alt="Icono de GhostMaker12">
+            GhostMaker12 - Developer, Builder, 3DModeler/Animator. He is the best developer.
+        </div>
+    </section>
     
     <!-- Contenido principal -->
     <main>
