--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sonic Rising Chaos</title>
-    <link rel="icon" type="image/png" href="favicon.png">
+    <link rel="icon" type="image/png" href="SRC_Team.png">
     <style>
       /* Estilos para el body */
       body {
@@ -86,16 +86,13 @@
     <section class="creditos">
       <h2>About Us</h2>
       <div class="credito">
-        <img src="Blaze.png" alt="Icono de Blaze"> <span>Blaze</span>
-        Owner, Graphic designer, Scripter. He started everything.
+        <img src="Blaze.png" alt="Icono de Blaze"> <span>Blaze</span> / Owner, Graphic designer, Scripter. He started everything.
       </div>
       <div class="credito">
-        <img src="Virtual.png" alt="Icono de Virtual"> <span>DEVirtual</span>
-        Co-Owner, Scripter, UI work. He is the best scripter.
+        <img src="Virtual.png" alt="Icono de Virtual"> <span>DEVirtual</span> / Co-Owner, Scripter, UI work. He is the best scripter.
       </div>
       <div class="credito">
-        <img src="GhostMaker12.png" alt="Icono de GhostMaker12"> <span>GhostMaker12</span>
-        Developer, Builder, 3DModeler/Animator. He is the best developer.
+        <img src="GhostMaker12.png" alt="Icono de GhostMaker12"> <span>GhostMaker12</span> / Developer, Builder, 3DModeler/Animator. He is the best developer.
       </div>
     </section>
   </body>
