--- a/index.html
+++ b/index.html
@@ -27,27 +27,27 @@
       }
 
       /* Estilos para el logo */
-      .logo {
+     .logo {
         width: 40%;
         height: auto;
         margin: 20px auto;
       }
 
       /* Estilos para la descripción */
-      .descripcion {
+     .descripcion {
         font-size: 24px;
         color: #FFFFFF;
         margin-bottom: 20px;
       }
 
       /* Estilos para la sección de créditos */
-      .creditos {
+     .creditos {
         background-color: #f7f7f7;
         padding: 40px;
         text-align: center;
       }
 
-      .credito {
+     .credito {
         margin-bottom: 20px;
         font-size: 24px;
         display: flex;
@@ -56,11 +56,11 @@
         border-bottom: 1px solid #ccc;
       }
 
-      .credito:last-child {
+     .credito:last-child {
         border-bottom: none;
       }
 
-      .credito img {
+     .credito img {
         width: 40px;
         height: 40px;
         margin-right: 20px;
@@ -68,9 +68,16 @@
       }
 
       /* Nuevo estilo para hacer que los nombres sean más grandes */
-      .credito span {
-        font-size: 30px;
+     .credito.name {
+        font-size: 36px;
         font-weight: bold;
+        margin-bottom: 10px;
+        display: block;
+      }
+
+     .credito.role {
+        font-size: 24px;
+        color: #666;
       }
     </style>
   </head>
@@ -86,13 +93,19 @@
     <section class="creditos">
       <h2>About Us</h2>
       <div class="credito">
-        <img src="Blaze.png" alt="Icono de Blaze"> <span>Blaze</span> / Owner, Graphic designer, Scripter. He started everything.
+        <img src="Blaze.png" alt="Icono de Blaze">
+        <h3 class="name">Blaze</h3>
+        <p class="role">Owner, Graphic designer, Scripter. He started everything.</p>
       </div>
       <div class="credito">
-        <img src="Virtual.png" alt="Icono de Virtual"> <span>DEVirtual</span> / Co-Owner, Scripter, UI work. He is the best scripter.
+        <img src="Virtual.png" alt="Icono de Virtual">
+        <h3 class="name">DEVirtual</h3>
+        <p class="role">Co-Owner, Scripter, UI work. He is the best scripter.</p>
       </div>
       <div class="credito">
-        <img src="GhostMaker12.png" alt="Icono de GhostMaker12"> <span>GhostMaker12</span> / Developer, Builder, 3DModeler/Animator. He is the best developer.
+        <img src="GhostMaker12.png" alt="Icono de GhostMaker12">
+        <h3 class="name">GhostMaker12</h3>
+        <p class="role">Developer, Builder, 3DModeler/Animator. He is the best developer.</p>
       </div>
     </section>
   </body>
