--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
       /* Estilos para la sección de créditos */
       .creditos {
-        background-color: #f7f7f7;
+        background-color: rgba(0, 0, 255, 0.5);
         padding: 40px;
         text-align: center;
       }
