--- a/index.html
+++ b/index.html
@@ -78,13 +78,14 @@
 
       .credito .name {
         font-size: 36px;
+        color: #ffffff;
         font-weight: bold;
         margin-bottom: 10px;
       }
 
       .credito .role {
         font-size: 24px;
-        color: #666;
+        color: #ffffff;
       }
     </style>
   </head>
