--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
       /* Estilos para la sección de créditos */
       .creditos {
         background-color: rgba(0, 0, 255, 0.5);
+        color: #ffffff;
         padding: 40px;
         text-align: center;
       }
