--- a/index.html
+++ b/index.html
@@ -43,8 +43,13 @@
       /* Estilos para la sección de créditos */
       .creditos {
         background-color: rgba(0, 0, 255, 0.5);
+        font-size: 24px;
         color: #ffffff;
         padding: 40px;
+        text-align: left;
+      }
+
+      .creditos h2 {
         text-align: center;
       }
 
@@ -54,9 +59,7 @@
         padding: 10px;
         border-bottom: 1px solid #ccc;
         display: flex;
-        /* Added flexbox layout */
         align-items: center;
-        /* Vertically center the icon and text */
       }
 
       .credito:last-child {
@@ -65,20 +68,17 @@
 
       .credito img {
         width: 80px;
-        /* Increased icon size */
         height: 80px;
-        /* Increased icon size */
         margin-right: 10px;
         border-radius: 50%;
       }
 
       .credito .info {
         flex: 1;
-        /* Take up the remaining space */
       }
 
       .credito .name {
-        font-size: 36px;
+        font-size: 30px;
         color: #ffffff;
         font-weight: bold;
         margin-bottom: 10px;
