--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sonic Rising Chaos</title>
     <link rel="icon" type="image/png" href="SRC_Team.png">
     <style>
-      /* Estilos para el body */
+      /* Styles for the body */
       body {
         font-family: Arial, sans-serif;
         background-image: url('Background.png');
@@ -18,75 +18,70 @@
         height: 100vh;
       }
 
-      /* Estilos para el header */
+      /* Styles for the header */
       header {
         background-color: rgba(0, 0, 255, 0.5);
         padding: 20px;
         text-align: center;
-        font-family: Arial, sans-serif;
       }
 
-      /* Estilos para el logo */
+      /* Styles for the logo */
       .logo {
         width: 40%;
         height: auto;
         margin: 20px auto;
       }
 
-      /* Estilos para la descripción */
-      .descripcion {
+      /* Styles for the description */
+      .description {
         font-size: 24px;
         color: #FFFFFF;
         margin-bottom: 20px;
       }
 
-      /* Estilos para la sección de créditos */
-      .creditos {
+      /* Styles for the credits section */
+      .credits {
         background-color: rgba(0, 0, 255, 0.5);
         font-size: 24px;
-        color: #ffffff;
+        color: #FFFFFF;
         padding: 40px;
-        text-align: left;
       }
 
-      .creditos h2 {
+      .credits h2 {
         text-align: center;
       }
 
-      .credito {
+      .credit {
         margin-bottom: 20px;
-        font-size: 24px;
         padding: 10px;
         border-bottom: 1px solid #ccc;
         display: flex;
         align-items: center;
       }
 
-      .credito:last-child {
+      .credit:last-child {
         border-bottom: none;
       }
 
-      .credito img {
+      .credit img {
         width: 80px;
         height: 80px;
         margin-right: 10px;
         border-radius: 50%;
       }
 
-      .credito .info {
+      .credit .info {
         flex: 1;
       }
 
-      .credito .name {
+      .name {
         font-size: 30px;
-        color: #ffffff;
         font-weight: bold;
         margin-bottom: 10px;
       }
 
-      .credito .role {
+      .role {
         font-size: 24px;
-        color: #ffffff;
       }
     </style>
   </head>
@@ -94,32 +89,32 @@
     <!-- Header -->
     <header>
       <!-- Logo -->
-      <img src="Sonic_Rising_Chaos_Game_Logo_2024.png" alt="Logo de Sonic Rising Chaos" class="logo">
-      <!-- Descripción -->
-      <p class="descripcion">Sonic Rising Chaos is a fangame made in Roblox powered by the "Digital Swirl Engine" that takes mechanics and is based on games like SA1, SA2 and Advance 2.</p>
+      <img src="Sonic_Rising_Chaos_Game_Logo_2024.png" alt="Sonic Rising Chaos Logo" class="logo">
+      <!-- Description -->
+      <p class="description">Sonic Rising Chaos is a fangame made in Roblox powered by the "Digital Swirl Engine" that takes mechanics and is based on games like SA1, SA2, and Advance 2.</p>
     </header>
-    <!-- Sección de créditos -->
-    <section class="creditos">
+    <!-- Credits Section -->
+    <section class="credits">
       <h2>About Us</h2>
-      <div class="credito">
-        <img src="Blaze.png" alt="Icono de Blaze">
+      <div class="credit">
+        <img src="Blaze.png" alt="Blaze Icon">
         <div class="info">
           <h3 class="name">Blaze</h3>
-          <p class="role">Owner, Graphic designer, Scripter. He started everything.</p>
+          <p class="role">Owner, Graphic Designer, Scripter. He started everything.</p>
         </div>
       </div>
-      <div class="credito">
-        <img src="Virtual.png" alt="Icono de Virtual">
+      <div class="credit">
+        <img src="Virtual.png" alt="Virtual Icon">
         <div class="info">
           <h3 class="name">DEVirtual</h3>
-          <p class="role">Co-Owner, Scripter, UI work. He is the best scripter.</p>
+          <p class="role">Co-Owner, Scripter, UI Work. He is the best scripter.</p>
         </div>
       </div>
-      <div class="credito">
-        <img src="GhostMaker12.png" alt="Icono de GhostMaker12">
+      <div class="credit">
+        <img src="GhostMaker12.png" alt="GhostMaker12 Icon">
         <div class="info">
           <h3 class="name">GhostMaker12</h3>
-          <p class="role">Developer, Builder, 3DModeler/Animator. He is the best developer.</p>
+          <p class="role">Developer, Builder, 3D Modeler/Animator. He is the best developer.</p>
         </div>
       </div>
     </section>
